feat: Favicon personalizado y meta tags actualizados
🎨 CAMBIOS REALIZADOS:
- Favicon: Reemplazado corazón por imagen 2024-07-11-00-35-34-117.jpg
- Meta tags: Actualizadas imágenes de Open Graph y Twitter
- Twitter: Cambiado @alexjackson por @DjWackoCDMX
- SEO: Mejoradas imágenes para compartir en redes sociales

📱 BENEFICIOS:
- Favicon personalizado visible en pestañas del navegador
- Imagen correcta al compartir en redes sociales
- Branding consistente con logo AlxJackson
- Meta tags optimizados para SEO

--- a/supabase/email-templates/confirm-signup.html
+++ b/supabase/email-templates/confirm-signup.html
@@ -140,7 +140,8 @@
             
             <p style="font-size: 11px; margin-top: 20px;">
                 Este correo fue enviado a {{ .Email }}. Si no creaste una cuenta con nosotros, 
-                puedes ignorar este mensaje de forma segura.
+                puedes ignorar este mensaje de forma segura.<br>
+                <strong>Dominio oficial:</strong> https://alx-show-flow.vercel.app
             </p>
         </div>
     </div>
