--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/jpeg" href="/2024-07-11-00-35-34-117.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AlxJackson | Plataforma de Entretenimiento y Reservaciones</title>
     <meta name="description" content="Sistema de reservaciones para eventos de entretenimiento. Shows de Freddy Mercury, Michael Jackson y más. Reserva tu evento con código QR único." />
@@ -10,11 +11,11 @@
     <meta property="og:title" content="AlxJackson | Entretenimiento Premium para Eventos" />
     <meta property="og:description" content="Plataforma de reservaciones para shows únicos. Freddy Mercury, Michael Jackson, Alex Vitor y más personajes icónicos para tu evento." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/placeholder.svg" />
+    <meta property="og:image" content="/2024-07-11-00-35-34-117.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@alexjackson" />
-    <meta name="twitter:image" content="/placeholder.svg" />
+    <meta name="twitter:site" content="@DjWackoCDMX" />
+    <meta name="twitter:image" content="/2024-07-11-00-35-34-117.jpg" />
   </head>
 
   <body>
